simple readme;dev with 1.19x;
todo:run fail with jar